Fixed CSS Overflow Bug

--- a/app/assets/stylesheets/modules/admin.css.scss
+++ b/app/assets/stylesheets/modules/admin.css.scss
@@ -33,7 +33,7 @@
 
       a {
         display: block;
-        height: 28px;
+        height: 23px;
         padding: 7px 10px 0px 10px;
 
         &:link,
